# bvhviewer

./: .gitignore  ActiveScenePanel.qml  Bvh3DView.qml  CMakeLists.txt  Main.qml  SceneColorUtils.js  SemanticColors.qml  SideBar.qml  ToneColorBar.qml  main.cpp
bvhfiles/: debug_axes.bvh
components/: ColorSwatch.qml  DualColorSwatch.qml  TimelineBar.qml  ToneColorBar.qml
docs/design/: 3d-data-model.md  architecture.md  data-structure.md  qtquick-integration.md  refactoring-notes.md  scene-manager.md  ui-styling.md
docs/requirements/: animation-controls.md  backlog.md  camera-controls.md  requirements.md  skeleton-colors.md
docs/specs/: bvh-file.md
src/core/: bvhmotion.cpp  bvhmotion.h  channel.cpp
src/core/bvhdatamodel/: CMakeLists.txt  bvh3dbone.h  bvh3djoint.h  bvh3dmodel.cpp  bvh3dmodel.h  bvhbonelistmodel.cpp  bvhbonelistmodel.h  bvhjointlistmodel.cpp  bvhjointlistmodel.h  pose_utils.cpp  pose_utils.h
src/core/bvhfile/: AGENTS.md  CMakeLists.txt  bvhfile.cpp  bvhfile.h  bvhnode.cpp  bvhnode.h  channel.h
src/ui/: bvhscenelistmodel.cpp  bvhscenelistmodel.h  bvhscenemodel.cpp  bvhscenemodel.h  bvhviewitem.cpp  bvhviewitem.h
src/ui/bvhscene/: CMakeLists.txt  bvhscene_foreign_types.h  bvhskeletonitem.cpp  bvhskeletonitem.h  camerasettings.cpp  camerasettings.h  scenemanager.cpp  scenemanager.h  skeletoncolorutils.cpp  skeletoncolorutils.h  viewportsettings.cpp  viewportsettings.h
tests/auto/core/: CMakeLists.txt
tests/auto/core/bvhdatamodel/: CMakeLists.txt
tests/auto/core/bvhdatamodel/test_bvh3dmodel/: CMakeLists.txt  tst_bvh3dmodel.cpp
tests/auto/core/bvhfile/: CMakeLists.txt
tests/auto/core/bvhfile/test_bvhfile/: CMakeLists.txt  tst_bvhfile.cpp
tests/auto/core/bvhfile/test_bvhmotion/: CMakeLists.txt  tst_bvhmotion.cpp
tests/auto/core/bvhfile/test_bvhnode/: CMakeLists.txt  tst_bvhnode.cpp
tests/auto/core/bvhfile/test_channel/: CMakeLists.txt  tst_channel.cpp
tests/auto/test_bvhfile/: CMakeLists.txt  tst_bvhfile.cpp
tests/auto/test_bvhmotion/: CMakeLists.txt  tst_bvhmotion.cpp
tests/auto/test_bvhnode/: CMakeLists.txt  tst_bvhnode.cpp
tests/auto/test_channel/: CMakeLists.txt  tst_channel.cpp
views/: ActiveScenePanel.qml  AppearanceTab.qml  Bvh3DView.qml  OffsetTab.qml  RemoveTab.qml  SceneSettingsPanel.qml  SideBar.qml
